--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^2.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.0",
     "mongodb": "^3.4.1",
+    "mongoose": "^5.8.6",
     "mysql2": "^2.1.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3"
