--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.6",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3"
   }
