--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
-  "license": "ISC",
+  "author": "Maria Kobzar",
   "devDependencies": {
     "nodemon": "^1.18.3"
   },
@@ -23,8 +22,10 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.6",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
