--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.11.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3"
   }
