--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "stripe": "^8.28.0"
   }
 }
